Fix horizontal scrolling

--- a/src/styles/_info.scss
+++ b/src/styles/_info.scss
@@ -10,7 +10,7 @@
 
 .info-block {
     height: auto;
-    width: 1020px;
+    width: 100%;
     margin: 50px auto;
 }
 
@@ -63,6 +63,9 @@
     .info-content {
         display: flex;
         flex-direction: column;
-        justify-content: center;
+        overflow: hidden;
+    }
+    .info-block {
+        overflow: hidden;
     }
 }
